# fed-br

./: .gitignore  .pre-commit-config.yaml  main.py  mypy.ini  pyproject.toml
common/: __init__.py  const.py  logging.py  utils.py
fed-br/: __init__.py  client_app.py  server_app.py  system_model.py  task.py
fed_br/: __init__.py  client_app.py  game_logic.py  metrics_logger.py  server_app.py  strategy.py  system_model.py  task.py
scripts/: plot_client_metrics.py  plot_paper_figures.py
