[project]
name = "fed_br"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flwr-datasets>=0.5.0",
    "flwr[simulation]>=1.25.0",
    "mypy>=1.14.0",
    "opacus>=1.5.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "ruff>=0.9.0",
    "bump-my-version>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "codtin"

[tool.flwr.app.components]
serverapp = "fed_br.server_app:app"
clientapp = "fed_br.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
fraction-evaluate = 1
local-epochs = 1
learning-rate = 0.1
batch-size = 32
target-delta = 1e-5
max-grad-norm = 1.0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.mypy]
# 严格模式配置
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
strict_equality = true
strict_optional = true
explicit_package_bases = true

# 忽略第三方库的类型检查
[[tool.mypy.overrides]]
module = [
    "opacus.*",
    "loguru.*",
    "flwr.*",
    "flwr_datasets.*",
    "datasets.*",
]
ignore_missing_imports = true

[tool.ruff]
# 目标 Python 版本
target-version = "py313"

# 每行最大字符数（与 black 兼容）
line-length = 88

# 扫描的文件路径
include = ["*.py", "*.pyi", "**/pyproject.toml"]

# 排除的目录
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (导入排序)
    "N",      # pep8-naming
    "UP",     # pyupgrade (升级到新语法)
    "B",      # flake8-bugbear (检测常见 bug)
    "C4",     # flake8-comprehensions (优化推导式)
    "SIM",    # flake8-simplify (简化代码)
    "TCH",    # flake8-type-checking (类型检查块)
    "RUF",    # ruff 特有规则
]

# 忽略的规则
ignore = [
    "E501",    # 行过长（由 ruff format 处理）
    "B008",    # 函数调用作为默认参数（常见于 dataclass）
    "SIM108",  # 不强制使用三元运算符
]

# 每个文件允许的未使用导入
unfixable = ["F401"]

# 允许自动修复的规则
fixable = ["ALL"]

# 检查导入的代码块
[tool.ruff.lint.isort]
known-first-party = ["fed_br", "common"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许未使用的导入

[tool.bumpversion]
current_version = "0.1.0"
commit = true
message = "Bump version: {current_version} → {new_version}"
tag = true
tag_name = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "fed_br/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "common/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
